--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,7 +14,7 @@
 
 body {
   margin: 0;
-  padding: 0;
+  padding-top: 25px;
   overflow: auto;
 }
 
